# see_world

./: .gitignore  plan01.md  经验.md  进度.md  进度01.md
.github/workflows/: build-android.yml
SLAM/: README.md
SLAM/ORB_SLAM3/: .gitignore  CMakeLists.txt  build.sh
SLAM/ORB_SLAM3/python/: dense_mapping.py  pointcloud.py  slam_runner.py
SLAM/ORB_SLAM3/scripts/: download_dataset.py
SLAM/ORB_SLAM3/src/: System.cc  Tracking.cc
SLAM/VINS_Mono/: README.md
SLAM/camera_calibration/: calibrate.py
SLAM/python_interface/: __init__.py  pointcloud.py  slam_runner.py
SLAM/scripts/: setup_orb_slam3.sh  setup_vins_mono.sh
android/: gradlew  settings.gradle.kts
android/app/: build.gradle.kts
app/: README.md
app/pwa/: camera.js  service-worker.js
docs/: plan01.md  plan02.md  经验01.md  经验02.md  进度01.md  进度02.md
ros2_ws/src/slam3r_ros/: package.xml  setup.py
ros2_ws/src/slam3r_ros/slam3r_ros/: mast3r_batch_standalone.py  mast3r_infer_standalone.py  mast3r_node.py  node.py
tools/: copy_progress.py  setup.py
tools/kimi/: __init__.py  cli.py  kimi_client.py  requirements.txt
web/: start_mast3r.py
web/backend/: config.py  main.py  utils.py
web/backend/routes/: calibrate.py  model.py  slam3r_routes.py  slam_routes.py  test_routes.py  upload.py
web/backend/services/: kimi_service.py  mast3r_slam_service.py  ros2_bridge.py  ros_slam_service.py  slam3r_service.py  slam_service.py
web/frontend/: calibrate.html  checkerboard.html  frame_test.html  index.html  manifest.json  service-worker.js
web/frontend/css/: style.css
web/frontend/js/: app.js  gallery.js  (+5 more)
(+9 files in other folders)
