<?xml version="1.0"?>
<package format="3">
  <name>slam3r_ros</name>
  <version>0.1.0</version>
  <description>ROS2 wrapper for SLAM3R dense reconstruction (Python)</description>
  <maintainer email="see@world.dev">See World</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
